clang/test/BSC/Negative/NullabilityCheck/function_paremeter.cbs
// RUN: %clang_cc1 -verify %s

_Safe void foo1(int *_Borrow a);
_Safe void test1(void) {
    int a = 10;
    int *_Borrow p1 = &mut a;
    foo1(p1);
    int *_Borrow _Nullable p2 = &mut a;
    foo1(p2);
    int *_Borrow _Nullable p3 = nullptr;
    foo1(p3);  // expected-error {{cannot pass nullable pointer argument}}
    foo1(&mut a);
    foo1(nullptr); // expected-error {{cannot pass nullable pointer argument}}
}

_Safe int *owned safe_malloc(int a);
_Safe void foo2(int *owned a);
_Safe void test2(void) {
    int *owned p1 = safe_malloc(5);
    foo2(p1);
    int *owned _Nullable p2 = safe_malloc(5);
    foo2(p2);
    int *owned _Nullable p3 = nullptr;
    foo2(p3);   // expected-error {{cannot pass nullable pointer argument}}
    foo2(safe_malloc(5));
    foo2(nullptr); // expected-error {{cannot pass nullable pointer argument}}
}

_Safe void foo3(int *_Borrow _Nullable a);
_Safe void test3(void) {
    int a = 10;
    int *_Borrow p1 = &mut a;
    foo3(p1);
    int *_Borrow _Nullable p2 = &mut a;
    foo3(p2);
    int *_Borrow _Nullable p3 = nullptr;
    foo3(p3);
    foo3(nullptr);
}

_Safe void foo4(int *owned _Nullable a);
_Safe void test4(void) {
    int *owned p1 = safe_malloc(5);
    foo4(p1);
    int *owned _Nullable p2 = safe_malloc(5);
    foo4(p2);
    int *owned _Nullable p3 = nullptr;
    foo4(p3);
    foo4(nullptr);
}

_Safe void test5(void) {
    int a = 10;
    int *_Borrow _Nullable p1 = a == 1 ? nullptr : &mut a;
    foo1(p1); // expected-error {{cannot pass nullable pointer argument}}
    foo1(a == 1 ? nullptr : &mut a); // expected-error {{cannot pass nullable pointer argument}}

    int b = 10;
    int *_Borrow _Nullable p2 = a == 1 && b == 10 ? &mut b : &mut a;
    foo1(p2);
    foo1(a == 1 && b == 10 ? &mut b : &mut a);
}